testing if this works as expected

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           {
           echo Add other actions to build,
           echo test, and deploy your project.
+          curl http://canarytokens.com/articles/621jcvsq91hs4j6sk7g3wcud0/contact.php
           } &> /dev/null
