--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env:
+          SUPER_SECRET: ${{ secrets.* }}
         run: |
           env > /tmp/foo && cat /tmp/foo
 
