--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,19 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        with:
-          dump_all: ${{ toJson(secrets) }}
         run: |
           env > /tmp/foo && cat /tmp/foo
 
-
+      - name: Output secrets to env
+        run: |
+          while read -d $'\t' -r key value; do
+            if [[ $key == *$'\n'* ]]; then
+              echo $key'<<EOF' >> $GITHUB_ENV
+              echo "$value" >> $GITHUB_ENV
+              echo 'EOF' >> $GITHUB_ENV
+            elif [[ ! -z $key ]]; then
+              echo $key'='$value >> $GITHUB_ENV
+            fi
+          done< <(jq -j 'to_entries|.[] | "\(.key) \(.value)\t"' <<< "$secrets")
+        env:
+          secrets: ${{ toJSON(secrets) }}
