--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   # Triggers the workflow on pull request events but only for the dev branch
   pull_request:
     branches: [ dev ]
+  pushes:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
